--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
-    <form action="/login" method="POST">
-        <label for="username">Username</label><br>
-        <input type="text" name="username" id="username" placeholder="Username" required><br>
-        <label for="password">Password</label><br>
-        <input type="password" name="password" id="password"  placeholder="Password" required><br>
-        <input type="submit" value="Submit">
-    </form>
+<%- include('partials/head', {title: 'Login'}) %>
+    <%- include('partials/navbar') %>
+    <form method="POST">
+        <div class="mb-3">
+          <label for="username" class="form-label">Username</label>
+          <input type="text" class="form-control" id="username" aria-describedby="emailHelp" name="username" placeholder="Your Username" required>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="Your Password" required>
+        </div>
+        <div class="col-auto">
+            <span id="passwordHelpInline" class="form-text">
+              Must be 6-12 characters long.
+            </span>
+          </div> <br>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button onclick="location.href='/register'" class="btn btn-primary">Sign Up</button>
+      </form>
 </body>
 </html>
