--- a/views/profileEdit.ejs
+++ b/views/profileEdit.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Profile</title>
-</head>
-<body>
+    <%- include('partials/head', {title: 'Profile'}) %>
+    <%- include('partials/navbar') %>
     <form method="post">
         <label for="">First Name</label><br>
         <input type="text" name="firstName" value="<%= data.firstName %>"><br>
