--- a/views/formEdit.ejs
+++ b/views/formEdit.ejs
@@ -1,6 +1,6 @@
 <%- include('./partial/header.ejs',{title:"Form Buy"}) %>
 <body>
-    <form action="/cart/<%= destId %>/<%= dataCust.id %>/edit" method="POST">
+    <form action="/cart/<%= junctId %> /<%= destId %>/<%= dataCust.id %>/edit" method="POST">
         <h3><%= dataCust.firstName %> Cart</h3><br>
         <input type="hidden" value="<%= dataCust.id %>" name="ProfileId">
         <Label>Location</Label><br>
