--- a/views/destination.ejs
+++ b/views/destination.ejs
@@ -1,6 +1,6 @@
-<%- include('./partial/header',{title:"Destination"}) %> 
-<body>
-    <table border>
+<%- include('partials/head', {title: 'Destinations'}) %>
+<%- include('partials/navbar') %>
+    <table border='1'>
         <tr>
             <th>Location</th>
             <th>Lodging</th>
