--- a/views/destinationLocation.ejs
+++ b/views/destinationLocation.ejs
@@ -1,5 +1,5 @@
-<%- include('./partial/header.ejs',{title:"Buy Ticket"}) %> 
-<body>
+<%- include('partials/head', {title: 'Buy Ticket'}) %>
+<%- include('partials/navbar') %>
 <table border>
     <tr>
         <th>Location</th>
