--- a/views/formEdit.ejs
+++ b/views/formEdit.ejs
@@ -1,5 +1,5 @@
-<%- include('./partial/header.ejs',{title:"Form Buy"}) %>
-<body>
+<%- include('partials/head', {title: 'Form Buy'}) %>
+<%- include('partials/navbar') %>
     <form action="/cart/<%= destId %>/<%= dataCust.id %>/edit" method="POST">
         <h3><%= dataCust.firstName %> Cart</h3><br>
         <input type="hidden" value="<%= dataCust.id %>" name="ProfileId">
