--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,7 +11,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/destination">Destination</a>
+            <a class="nav-link active" aria-current="page" href="/destinations">Destination</a>
           </li>
         </ul>
         <ul class="nav navbar-nav ml-auto">
@@ -20,7 +20,7 @@
             <a class="nav-link active" aria-current="page" href="/profile/<%= login.ProfileId %>">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/cart">Cart</a>
+            <a class="nav-link active" aria-current="page" href="/cart/<%= login.ProfileId %>">Cart</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/logout">Log Out</a>
