--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,30 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/style.css">
-    <title>Document</title>
-</head>
-<body>
+<%- include('partials/head', {title: 'Chat'}) %>
+<style>
+  .chat-messages {
+  background-color: lightgray;
+  width: 500px;
+  height: 300px;
+  overflow: scroll;
+  padding: 5px; 
+  border-style: solid;
+}
+
+
+</style>
+
+<%- include('partials/navbar') %>
     <main class="chat-main" style="border: 1000px;">
-        <div class="chat-room">
+        <div class="chat-room d-flex p-2 bd-highlight" >
             <h3>Chat Room</h3>
         </div>
-        <div class="chat-box">
-            <div class="chat-messages"></div>
+        <div class="chat-box d-flex p-2 bd-highlight container">
+            <div class="chat-messages" style="border-style: solid"></div>
 
         </div>
     </main>
-        <div class="chat-form-container">
+        <div class="chat-form-container container">
             <form id="chat-form">
                 <input
                 id="msg"
                 type="text"
                 placeholder="Enter Message"
                 />
-                <button class="btn">Send</button>
+                <button class="btn btn-outline-primary">Send</button>
             </form>
         </div>
     </div>
