--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,10 +17,13 @@
         <ul class="nav navbar-nav ml-auto">
           <% if (login) {%>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/profile/<%= login.ProfileId %>">Profile</a>
+            <a class="nav-link active" aria-current="page" href="/chat">Chat</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/cart/<%= login.ProfileId %>">Cart</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/profile/<%= login.ProfileId %>">Profile</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/logout">Log Out</a>
